--- a/.env
+++ b/.env
@@ -1,1 +1,28 @@
+# Copy this to .env for local testing
+# DO NOT commit .env to git!
 
+# Your secret code from the Google Form submission
+SECRET_CODE=your-secret-here
+
+# GitHub Personal Access Token (needs repo, workflow, write:packages permissions)
+# Get from: https://github.com/settings/tokens
+GITHUB_TOKEN=ghp_your_token_here
+
+# Your GitHub username
+GITHUB_USERNAME=yourusername
+
+# LLM API Key - Choose ONE provider:
+# Option 1: Groq (FREE, FAST - Recommended)
+# Get from: https://console.groq.com
+LLM_API_KEY=gsk_your_groq_key_here
+LLM_PROVIDER=groq
+
+# Option 2: OpenAI (Paid, ~$0.50 per task)
+# Get from: https://platform.openai.com
+# LLM_API_KEY=sk-your_openai_key_here
+# LLM_PROVIDER=openai
+
+# Option 3: Anthropic Claude (Paid, ~$1 per task)
+# Get from: https://console.anthropic.com
+# LLM_API_KEY=sk-ant-your_anthropic_key_here
+# LLM_PROVIDER=anthropic
