--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@
 # DO NOT commit .env to git!
 
 # Your secret code from the Google Form submission
-SECRET_CODE=your-secret-here
+SECRET_CODE=13disha13
 
 # GitHub Personal Access Token (needs repo, workflow, write:packages permissions)
 # Get from: https://github.com/settings/tokens
-GITHUB_TOKEN=ghp_your_token_here
+GITHUB_TOKEN=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
 
 # Your GitHub username
-GITHUB_USERNAME=yourusername
+GITHUB_USERNAME=22f3003001
 
 # LLM API Key - Choose ONE provider:
 # Option 1: Groq (FREE, FAST - Recommended)
