--- a/.env
+++ b/.env
@@ -1,28 +1,15 @@
-# Copy this to .env for local testing
-# DO NOT commit .env to git!
 
-# Your secret code from the Google Form submission
-SECRET_CODE=13disha13
 
-# GitHub Personal Access Token (needs repo, workflow, write:packages permissions)
-# Get from: https://github.com/settings/tokens
-GITHUB_TOKEN=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
+# secret code from the Google Form submission
+SECRET_CODE="13disha13"
 
-# Your GitHub username
-GITHUB_USERNAME=22f3003001
 
-# LLM API Key - Choose ONE provider:
-# Option 1: Groq (FREE, FAST - Recommended)
-# Get from: https://console.groq.com
-LLM_API_KEY=gsk_your_groq_key_here
-LLM_PROVIDER=groq
+GITHUB_TOKEN="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"
 
-# Option 2: OpenAI (Paid, ~$0.50 per task)
-# Get from: https://platform.openai.com
-# LLM_API_KEY=sk-your_openai_key_here
-# LLM_PROVIDER=openai
+# GitHub username
+GITHUB_USERNAME="22f3003001"
 
-# Option 3: Anthropic Claude (Paid, ~$1 per task)
-# Get from: https://console.anthropic.com
-# LLM_API_KEY=sk-ant-your_anthropic_key_here
-# LLM_PROVIDER=anthropic
+
+LLM_API_KEY="eyJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6IjIyZjMwMDMwMDFAZHMuc3R1ZHkuaWl0bS5hYy5pbiJ9.tMBWVJHN3ao6zRRwRX59FNfuVgp4ZGVhEshf1Bn3g4U"
+LLM_PROVIDER="gemini"
+
